src/tests/function-declarations/6.txt
function-declarations/6.c:0:1: error: no main function defined
 
 ^
function-declarations/6.c:3:1: error: identifier 'f' already taken by variable
 int f(int a, float b);
 ^
